# socratic-spec

./: .gitignore  PROJECT_STUDY_SOCRATIC_SPEC.md  README.md  package-lock.json  package.json  pyproject.toml  socratic-spec-refiner.md  tsconfig.json  vitest.config.ts
.orch/: orch.db
.orch/tasks/: spec.ir.json
.plan/: plan-001-socratic-spec-v1.md
src/: index.ts  interrogator.ts  logger.ts  orchestrator.ts  specSynthesizer.ts  types.ts
src/__tests__/: contradiction.test.ts  specSynthesizer.test.ts
src/socratic_spec/: __init__.py  agents.py  cli.py  config.py  exceptions.py  logging_config.py  orchestrator.py  pi_client.py  session.py
src/socratic_spec/parsers/: __init__.py  interrogator.py  respondee.py  spec_draft.py  transcript.py
src/socratic_spec/templates/: interrogator_system.txt  respondee_system.txt
tests/: alternation.test.ts  conftest.py  coverage.test.ts  edge-malformed-answer.test.ts  edge-max-categories-exhausted.test.ts  edge-max-rounds.test.ts  edge-no-questions-done.test.ts  edge-pi-nonzero-exit.test.ts  edge-rephrasing.test.ts  edge-trivial-spec.test.ts  interrogator.test.ts  orchestrator.test.js  orchestrator.test.ts  test_cli.py  test_config.py  test_integration.py  test_interrogator_parser.py  test_respondee_parser.py  test_session.py  test_transcript_parser.py
