[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socratic_spec"
version = "0.1.0"
description = "A two-agent spec refinement tool using Socratic questioning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Kyle Lampa", email = "kyle@example.com"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Pre-processors",
]
keywords = ["specification", "documentation", "socratic-method", "ai"]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "hypothesis>=6.100",
    "ruff>=0.3",
    "mypy>=1.9",
    "types-python-dateutil>=2.9",
    "click>=8.0",
    "tomli>=2.0; python_version < '3.11'",
]

all = [
    "click>=8.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
socratic-spec = "socratic_spec.cli:main"

[project.urls]
Homepage = "https://github.com/kylelampa/socratic-spec"
Repository = "https://github.com/kylelampa/socratic-spec"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
socratic_spec = ["templates/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.hypothesis]
profile = "CI"
max_examples = 100

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "DTZ", "T10", "ISC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
